@@ -1,3 +1,7 @@
+* 2013-12-13 - thorben.betten@open-xchange.com
+
+ - Fix for bug 30294: Properly detect availability of spam handler(s)
+
 * 2013-12-13 - marc.arens@open-xchange.com
 
  - Fix for bug 30128: Implement service to allow cascading cleanup per ID
